--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -5,6 +5,7 @@
 # Configure the English version of the site.
 [en]
   languageCode = "en-us"
+  title = "Desirrê Petters-Vandresen"
   contentDir = "content/en"  # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
 
 # Uncomment the lines below to configure your website in a second language.
@@ -15,6 +16,6 @@
   [pt.params]
     description = "Site description in Chinese..."
   [[pt.menu.main]]
-    name = "Desirrê"
+    name = "Sobre mim"
     url = "#about"
     weight = 1
