--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -19,3 +19,47 @@
     name = "Sobre mim"
     url = "#about"
     weight = 1
+	[[main]]
+  
+[[pt.menu.main]]
+  name = "Posts"
+  url = "#posts"
+  weight = 20
+
+[[pt.menu.main]]
+  name = "Projetos"
+  url = "#projects"
+  identifier = "projects"
+  weight = 30
+  
+[[pt.menu.main]]
+  name = "Comparação de genomas de espécies de Phyllosticta associadas a Citros"
+  url = "project/phyllosticta-genomes"
+  parent = "projects"
+  weight = 1
+  
+[[pt.menu.main]]
+  name = "Análises funcionais de espécies de Phyllosticta associadas a Citros"
+  url = "project/phyllosticta-functional"
+  parent = "projects"
+  weight = 2
+
+[[pt.menu.main]]
+  name = "Publicações"
+  url = "#publications"
+  weight = 40
+  
+[[pt.menu.main]]
+  name = "Palestras a Aulas"
+  url = "#talks"
+  weight = 50
+  
+[[pt.menu.main]]
+  name = "Cursos"
+  url = "#featured"
+  weight = 60  
+
+[[pt.menu.main]]
+  name = "Contato"
+  url = "#contact"
+  weight = 70
