Testing one new pt menu

--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -19,3 +19,7 @@
     name = "Sobre mim"
     url = "#about"
     weight = 1
+  [[pt.menu.main]]
+    name = "Posts"
+    url = "#posts"
+    weight = 20
