--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -43,7 +43,7 @@
     url = "#publications"
     weight = 40
   [[pt.menu.main]]
-    name = "Palestras a Aulas"
+    name = "Palestras e Aulas"
     url = "#talks"
     weight = 50
   [[pt.menu.main]]
